# senhuk-turismo

./: README  README.md  pyproject.toml
senhuk_tur_project/: db.sqlite3  db.sqlite3-old  manage.py
senhuk_tur_project/clients/: models.py  urls.py  views.py
senhuk_tur_project/clients/migrations/: 0001_initial.py  0002_alter_client_birth_date.py  0003_alter_client_contact_1_alter_client_contact_1_mobile_and_more.py  0004_alter_client_contact_1_mobile_and_more.py  0005_alter_client_contact_1_mobile_and_more.py  0006_remove_client_contact_1_and_more.py  0007_alter_client_description.py  0008_alter_client_description.py  0009_alter_client_description.py  0010_alter_client_description.py  0011_alter_client_description.py  0012_alter_client_description_alter_client_email.py
senhuk_tur_project/clients/templates/: clients.html  clientsList.html
senhuk_tur_project/orders/: models.py  urls.py  views.py
senhuk_tur_project/orders/migrations/: 0001_initial.py  0002_alter_order_approximate_size_and_more.py
senhuk_tur_project/orders/templates/: orders.html
senhuk_tur_project/senhuk_tur_project/: asgi.py  settings.py  urls.py  views.py  wsgi.py
senhuk_tur_project/templates/: index.html
senhuk_tur_project/templates/account/: login.html
senhuk_tur_project/travels/: models.py  urls.py  views.py
senhuk_tur_project/travels/migrations/: 0001_initial.py  0002_rename_client_travel.py  0003_alter_travel_type.py
senhuk_tur_project/travels/templates/: travels.html
