[tool.poetry]
name = "senhuk-turismo"
version = "0.1.0"
description = ""
authors = ["juliocms <juliocms@gmail.com>"]
readme = "README.md"
packages = [{include = "senhuk_turismo"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
